RESOLVED FIXED44708
[chromium] WebEntities is broken
https://bugs.webkit.org/show_bug.cgi?id=44708
Summary [chromium] WebEntities is broken
Ryosuke Niwa
Reported 2010-08-26 12:47:48 PDT
After new HTML tree builder has been enabled, /WebKit/chromium/src/WebEntities.* got broken and Chromium's "Save As" do not function as intended. http://crbug.com/53148/
Attachments
fixes the bug (3.03 KB, patch)
2010-08-26 13:01 PDT, Ryosuke Niwa
eric: review+
Ryosuke Niwa
Comment 1 2010-08-26 13:01:10 PDT
Created attachment 65604 [details] fixes the bug
Eric Seidel (no email)
Comment 2 2010-08-26 13:11:39 PDT
Comment on attachment 65604 [details] fixes the bug Yay! It no longer needs to include the HTMLEntityTable.h header though.
James Robinson
Comment 3 2010-08-26 13:12:26 PDT
Do we really have to keep the 0x0027->#39 mapping? What's actually testing that?
Ryosuke Niwa
Comment 4 2010-08-26 13:46:24 PDT
(In reply to comment #3) > Do we really have to keep the 0x0027->#39 mapping? What's actually testing that? I could fix the test to expect ' but I didn't want to modify that now because it might trigger some incompatibility issues.
Ryosuke Niwa
Comment 5 2010-08-26 13:49:37 PDT
(In reply to comment #2) > (From update of attachment 65604 [details]) > Yay! It no longer needs to include the HTMLEntityTable.h header though. Will remove and commit.
Ryosuke Niwa
Comment 6 2010-08-26 13:54:35 PDT
Note You need to log in before you can comment on or make changes to this bug.