2010-08-26  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Eric Seidel.

        [chromium] WebEntities is broken
        https://bugs.webkit.org/show_bug.cgi?id=44708

        For serialization purposes, we don't need to convert all entity references.
        This patch modifies WebEntities::WebEntities to use hard-coded entity lists for both HTML and XML,
        and deletes populateMapFromXMLEntities and populateMapFromHTMLEntityTable.

        No tests are added since the code is tested in DomSerializerTests

        * src/WebEntities.cpp:
        (WebKit::):
        (WebKit::WebEntities::WebEntities):


Canonical link: https://commits.webkit.org/56903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66131 268f45cc-cd09-0410-ab3c-d52691b4dbfc